Ajout variables couleurs

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,6 +2,6 @@ $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 $colour-white: #fff;
-$colour-gray: #808080;
-$colour-lightgray: #D3D3D3;
-$colour-footer: #000;
+$colour-gray: #EAEAEA;
+$colour-lightgray: #F7F7F7;
+$colour-footer: #353535;
