--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./layouts/form";
 @import "./layouts/header";
 @import "./layouts/nav";
+@import "./layouts/card";
 
 @import "./pages/home";
 @import "./pages/menu_la-palette-du-gout";
