--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,11 @@
 $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
+$colour-tertiary--darken: #078868;
 $colour-white: #fff;
+$colour-black: #101010;
 $colour-gray: #EAEAEA;
 $colour-lightgray: #F7F7F7;
 $colour-footer: #353535;
+
+/*$box-shadow :0 4px 8px 0 rgba(0, 0, 0, 0.38);*/
