--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -46,3 +46,9 @@ button {
     font-size: 14px; 
     font-weight: 900;   
 }
+
+a {
+    outline: none ;
+    text-decoration: none;
+    color: $colour-black;
+}
