--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -20,6 +20,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    left: 1px;
 }
 
 .button--green {
@@ -28,6 +30,9 @@
     padding: 5px 15px;
     color: $colour-tertiary--darken;
     border-radius: 2px;
+    position: absolute;
+    right: 50px;
+    bottom: 135px;
 }
 
 .header__button--backtohomepage {
