--- a/sass/layouts/_card.scss
+++ b/sass/layouts/_card.scss
@@ -9,3 +9,53 @@
     width: 25px; 
     margin-left: 25px;  
 }
+
+.fonctionnement__card {
+    display: flex;
+    border: 2px solid $colour-lightgray;
+    border-radius: 20px;
+    padding: 15px 20px;
+    width: 70%;
+    background-color: $colour-lightgray;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.38); 
+    .fa-solid, .fas {
+        margin: 0px 25px 0px 15px;
+        display: flex;
+        align-items: center;   
+    } 
+}
+
+.restaurants__card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 20px;
+    background-color: white;
+    width: 90%;
+    height: 250px;
+    margin: 10px 0px; 
+    img {
+        border-radius: 20px 20px 0 0;
+        width: 100%;
+        height: 170px;
+        object-fit: cover;
+    }  
+}
+
+.restaurants__card__description {
+    padding: 0px 12px;
+    h2 {
+        /*font-family: "Shrikhand", sans-serif;
+        font-weight: 600;
+        font-size: 20px;
+        font-style: normal;*/
+        margin-bottom: 0px;
+        /*Ne pas oublier d'enlever la class card description title au HTML*/
+    }
+    .fa-regular, .far {
+        position: absolute;
+        right: 50px;
+        font-size: 30px;
+    }
+    p {
+        margin: 5px 0 0 0;
+    }
+}
