--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -6,6 +6,7 @@
     border: 2px solid $colour-primary;
     /*box-shadow: $box-shadow
     color: $colour-white;*/
+    margin: 10px 0 40px 0;
 }
 
 .card__button {
