--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -40,7 +40,8 @@
     background-color: $colour-white;
     border: none;
     color: $colour-black;
-    font-size: 20px;    
+    font-size: 20px;
+    padding-right: 30px;    
 }
 
 .button--order {
