--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,6 +104,7 @@ a {
   border: none;
   color: #101010;
   font-size: 20px;
+  padding-right: 30px;
 }
 
 .button--order {
@@ -178,6 +179,35 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.form {
+  background-color: #EAEAEA;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form .fa-solid, .form .fas {
+  margin: 15px;
+}
+.form input {
+  background-color: #EAEAEA;
+  border: none;
+}
+
+header {
+  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);*/
+  border-bottom: 3px outset rgba(0, 0, 0, 0.3);
+}
+header figure {
+  padding: 15px 0;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+header img {
+  width: 60%;
 }
 
 .category__card {
