--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "./layouts/header";
 @import "./layouts/nav";
 @import "./layouts/card";
+@import "./layouts/footer";
 
 @import "./pages/home";
 @import "./pages/menu_la-palette-du-gout";
