--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -26,20 +26,20 @@ h3 {
     font-style: normal;
 }
 
-.category__card {
+/*.category__card {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
     font-size: 14px ;
     font-style: normal;
-}
+}*/
 
-/* créer une mixin et rajouter juste le margin left*/
+/* créer une mixin et rajouter juste le margin left
 .category__card--offset {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
     font-size: 14px ;
     font-style: normal; 
-}
+}*/
 
 button {
     font-family: 'Roboto', sans-serif;
