--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,8 +4,9 @@
     padding: 10px 15px;
     border-radius: 20px;
     border: 2px solid $colour-primary;
-    /*box-shadow: $box-shadow
-    color: $colour-white;*/
+    box-shadow :0 4px 8px 0 rgba(0, 0, 0, 0.38);
+    /*box-shadow: $box-shadow*/
+    color: $colour-white;
     margin: 10px 0 40px 0;
 }
 
@@ -15,7 +16,7 @@
     padding: 4px 2px 2px 2px;
     border-radius: 100%;
     border: 2px solid $colour-primary;
-    color: #fff;
+    color: $colour-white;
     width: 12px;
     height: 12px;
     display: flex;
@@ -49,6 +50,6 @@
     padding: 10px 40px;
     border-radius: 30px;
     border: 2px solid $colour-primary;
-    /*box-shadow: $box-shadow
-    color: $colour-white;*/   
+    box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.38);
+    color: $colour-white;   
 }
