--- a/sass/layouts/_card.scss
+++ b/sass/layouts/_card.scss
@@ -2,13 +2,15 @@
     border-bottom: 3px solid $colour-tertiary;
     width: 25px;  
     margin-left: 10px; 
+    @include card-fonts;
 }
 
 /* créer une mixin et rajouter juste le margin left*/
 .category__card--offset {
     border-bottom: 3px solid $colour-tertiary;
     width: 25px; 
-    margin-left: 25px;  
+    margin-left: 25px;
+    @include card-fonts;  
 }
 
 .fonctionnement__card {
@@ -63,51 +65,15 @@
         margin: 5px 0 0 0;
     }
 }
-/*Rajouter une extension pour les autres card du menus*/
+/*Rajouter peut-être une mixin plutôt qu'une extension pour les autres card du menus*/
 .entries__card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 20px;
-    background-color: $colour-white;
-    width: 85%;
-    height: 60px;
-    margin: 10px 0px;
-    padding: 5px 15px 5px 15px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis; 
-    
-    h3 {
-    margin: 10px 0 0 0;
-    }
+    @include menu-card
+}
 
-    p {
-    margin: 0;
-    }
+.dishes__card {
+    @include menu-card
+}
 
-    span {
-       float: right; 
-    }
-
-    figure {
-        margin: 0;
-        position: relative;
-        border: 2px solid $colour-tertiary;
-        width: 50px;
-        height: 70px;
-        left: 16.1rem;
-        bottom: 3.5rem;
-        border-radius: 0px 15px 15px 0px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: $colour-tertiary;
-    }
-
-    .fa-regular, .far {
-        font-size: 20px;
-        background-color: white;
-        border: 0px solid $colour-tertiary;
-        border-radius: 50px;
-        color: $colour-tertiary;
-    }
+.desserts__card {
+    @include menu-card   
 }
