--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./base/typography";
 
 @import "./components/buttons";
+@import "./components/picture";
 
 @import "./layouts/container";
 @import "./layouts/form";
