--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,6 +6,7 @@ header {
         display: flex;
         justify-content: center;
         margin: 0;
+        position: relative;
     }
 
     img {
