--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,9 +1,9 @@
 /*rajouter une mixin aprés*/
 .introduction__button {
-    background-color: $colour-primary;
-    padding: 10px 15px;
+    background: $background-colour-button;
+    padding: 15px 25px;
     border-radius: 20px;
-    border: 2px solid $colour-primary;
+    border: none;
     box-shadow :0 4px 8px 0 rgba(0, 0, 0, 0.38);
     /*box-shadow: $box-shadow*/
     color: $colour-white;
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    left: 1px;
+    left: 7%;
 }
 
 .button--green {
@@ -33,8 +33,8 @@
     color: $colour-tertiary--darken;
     border-radius: 2px;
     position: absolute;
-    right: 50px;
-    bottom: 135px;
+    top: 5%;
+    right: 5%;
 }
 
 .header__button--backtohomepage {
@@ -42,14 +42,17 @@
     border: none;
     color: $colour-black;
     font-size: 20px;
-    padding-right: 30px;    
+    position: absolute;
+    left: 5%;
+    top: 35%;    
 }
 
 .button--order {
-    background-color: $colour-primary;
-    padding: 10px 40px;
+    background: $background-colour-button;
+    padding: 15px 40px;
     border-radius: 30px;
-    border: 2px solid $colour-primary;
+    border: none;
     box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.38);
-    color: $colour-white;   
+    color: $colour-white;
+    margin: 25px;   
 }
