--- a/sass/layouts/_card.scss
+++ b/sass/layouts/_card.scss
@@ -38,6 +38,7 @@
     width: 90%;
     height: 250px;
     margin: 10px 0px; 
+    position: relative;
     img {
         border-radius: 20px 20px 0 0;
         width: 100%;
@@ -48,6 +49,7 @@
 
 .restaurants__card__description {
     padding: 0px 12px;
+    position: relative;
     h2 {
         /*font-family: "Shrikhand", sans-serif;
         font-weight: 600;
@@ -58,7 +60,8 @@
     }
     .fa-regular, .far {
         position: absolute;
-        right: 50px;
+        top: 0%;
+        right: 8%;
         font-size: 30px;
     }
     p {
