--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -16,6 +16,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis; 
+    position: relative;
     
     h3 {
     margin: 10px 0 0 0;
@@ -31,12 +32,12 @@
 
     figure {
         margin: 0;
-        position: relative;
+        position: absolute;
+        top: 0%;
+        right: 0%;
         border: 2px solid $colour-tertiary;
-        width: 50px;
+        width: 15%;
         height: 70px;
-        left: 16.1rem;
-        bottom: 3.5rem;
         border-radius: 0px 15px 15px 0px;
         display: flex;
         justify-content: center;
@@ -55,11 +56,18 @@
 
 @mixin menu-container {
     background-color: $colour-lightgray;
-    height: 1200px;
+    height: 1135px;
     border-radius: 50px 50px 0px 0px;
 
     h1 {
-        padding: 40px 0 0 25px;
+        padding: 40px 0 0 15px;
+        position: relative;
+
+        .fa-regular, .far {
+            position: absolute;
+            right: 8%;
+            bottom: 0%;
+        }
     }
 }
 
@@ -68,4 +76,8 @@
     flex-direction: column;
     align-items: center; 
 }
+
+/*@mixin background-colour-button {
+    background: linear-gradient(103deg, rgba(238,114,218,1) 0%, rgba(169,94,220,1) 96%, rgba(167,92,220,1) 100%);
+}*/
 
