--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,3 +9,4 @@ $colour-lightgray: #F7F7F7;
 $colour-footer: #353535;
 
 /*$box-shadow :0 4px 8px 0 rgba(0, 0, 0, 0.38);*/
+$background-colour-button : linear-gradient(103deg, rgba(238,114,218,1) 0%, rgba(169,94,220,1) 96%, rgba(167,92,220,1) 100%);
