--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -20,6 +20,66 @@
     
     h3 {
     margin: 10px 0 0 0;
+    width: 85%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+    font-size: 15px;
+    }
+
+    p {
+    margin: 0;
+    width: 66%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    }
+
+    span {
+        position: absolute;
+        right: 5%; 
+    }
+
+    figure {
+        margin: 0;
+        position: absolute;
+        top: 0%;
+        right: 0%;
+        border: 2px solid $colour-tertiary;
+        width: 15%;
+        height: 70px;
+        border-radius: 0px 15px 15px 0px;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        background-color: $colour-tertiary;
+    }
+
+    .fa-regular, .far {
+        font-size: 20px;
+        background-color: white;
+        border: 0px solid $colour-tertiary;
+        border-radius: 50px;
+        color: $colour-tertiary;
+    }
+}
+
+@mixin menu-card--hover {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 20px;
+    background-color: $colour-white;
+    width: 85%;
+    height: 60px;
+    margin: 10px 0px;
+    padding: 5px 15px 5px 15px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis; 
+    position: relative;
+    
+    h3 {
+    margin: 10px 0 0 0;
     }
 
     p {
@@ -27,7 +87,9 @@
     }
 
     span {
-       float: right; 
+        float: none;
+        position: absolute;
+        right: 22%; 
     }
 
     figure {
