--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,3 +11,5 @@ $colour-primary--light:#F5EDFF;
 
 /*$box-shadow :0 4px 8px 0 rgba(0, 0, 0, 0.38);*/
 $background-colour-button : linear-gradient(103deg, rgba(238,114,218,1) 0%, rgba(169,94,220,1) 96%, rgba(167,92,220,1) 100%);
+/*$background-colour-button--hover :  background: rgb(197,122,224);
+background: linear-gradient(73deg, rgba(197,122,224,1) 0%, rgba(224,131,224,1) 95%);*/ 
